name:                toml
version:             0.1.0.0
synopsis:            TOML parser
description:         For parsing TOML. Also includes lenses.
license:             BSD2
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/joelteon/toml.git

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:     Text.Parser.Toml
                       Text.Parser.Toml.Pretty
  other-modules:       Text.Parser.Toml.TH
  ghc-options:         -Wall
  if flag(lib-Werror)
    ghc-options:       -Werror
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , ansi-wl-pprint
                     , bytestring
                     , containers
                     , deepseq
                     , iso8601-time
                     , lens
                     , mtl
                     , template-haskell
                     , text
                     , time
                     , trifecta
                     , unordered-containers
                     , utf8-string
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -with-rtsopts=-N
  main-is:             doctests.hs
  hs-source-dirs:      tests
  build-depends:       base, doctest >= 0.8
  default-language:    Haskell2010

test-suite corners
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -with-rtsopts=-N
  main-is:             corners.hs
  hs-source-dirs:      tests
  build-depends:       base, hspec, toml
  default-language:    Haskell2010
